// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`z-data-table-footer.vue should be rendered correctly 1`] = `
<div
  class="z-data-table-footer d-sm-flex justify-sm-end pt-sm-4"
>
  <div
    class="wrapper"
  >
    <nav
      aria-label="Pagination Navigation"
      role="navigation"
    >
      <ul
        class="v-pagination theme--light"
      >
        <li>
          <button
            aria-label="Previous page"
            class="v-pagination__navigation"
            type="button"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-chevron-left theme--light"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Goto Page 1"
            class="v-pagination__item"
            type="button"
          >
            1
          </button>
        </li>
        <li>
          <span
            class="v-pagination__more"
          >
            ...
          </span>
        </li>
        <li>
          <button
            aria-label="Goto Page 516"
            class="v-pagination__item"
            type="button"
          >
            516
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="Current Page, Page 517"
            class="v-pagination__item v-pagination__item--active primary"
            type="button"
          >
            517
          </button>
        </li>
        <li>
          <button
            aria-label="Goto Page 518"
            class="v-pagination__item"
            type="button"
          >
            518
          </button>
        </li>
        <li>
          <span
            class="v-pagination__more"
          >
            ...
          </span>
        </li>
        <li>
          <button
            aria-label="Goto Page 1000"
            class="v-pagination__item"
            type="button"
          >
            1000
          </button>
        </li>
        <li>
          <button
            aria-label="Next page"
            class="v-pagination__navigation"
            type="button"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-chevron-right theme--light"
            />
          </button>
        </li>
      </ul>
    </nav>
  </div>
  <div
    class="text-body-2 d-none d-sm-flex px-6 root"
    data-z-select-items-per-page=""
  >
    <span
      class="flex-grow-0 flex-shrink-0 pr-2"
    >
      表示件数:
    </span>
    <div
      class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-select"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
          style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma"
              >
                10
              </div>
              <input
                aria-readonly="false"
                autocomplete="off"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate mdi mdi-menu-down theme--light"
                />
              </div>
            </div>
            <input
              type="hidden"
              value="10"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`z-data-table-footer.vue should be rendered correctly 2`] = `
<div
  class="z-data-table-footer d-sm-flex justify-sm-end pt-sm-4"
>
  <div
    class="wrapper"
  >
    <nav
      aria-label="Pagination Navigation"
      role="navigation"
    >
      <ul
        class="v-pagination theme--light"
      >
        <li>
          <button
            aria-label="Previous page"
            class="v-pagination__navigation"
            type="button"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-chevron-left theme--light"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Goto Page 1"
            class="v-pagination__item"
            type="button"
          >
            1
          </button>
        </li>
        <li>
          <span
            class="v-pagination__more"
          >
            ...
          </span>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="Current Page, Page 517"
            class="v-pagination__item v-pagination__item--active primary"
            type="button"
          >
            517
          </button>
        </li>
        <li>
          <span
            class="v-pagination__more"
          >
            ...
          </span>
        </li>
        <li>
          <button
            aria-label="Goto Page 1000"
            class="v-pagination__item"
            type="button"
          >
            1000
          </button>
        </li>
        <li>
          <button
            aria-label="Next page"
            class="v-pagination__navigation"
            type="button"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-chevron-right theme--light"
            />
          </button>
        </li>
      </ul>
    </nav>
  </div>
  <div
    class="text-body-2 d-none d-sm-flex px-6 root"
    data-z-select-items-per-page=""
  >
    <span
      class="flex-grow-0 flex-shrink-0 pr-2"
    >
      表示件数:
    </span>
    <div
      class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-select"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
          style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma"
              >
                10
              </div>
              <input
                aria-readonly="false"
                autocomplete="off"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate mdi mdi-menu-down theme--light"
                />
              </div>
            </div>
            <input
              type="hidden"
              value="10"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
